# KernelTracer

./: LICENSE  OVERVIEW.md  README.md  main.py  pyproject.toml  pyvenv.cfg  requirements-vllm.txt  requirements.txt  setup.py
Qwen/Qwen3-4B/eval/print_aten_ops/: _TRACE_STATUS.json  print_aten.txt
Qwen/Qwen3-4B/eval/print_fx/: _TRACE_STATUS.json  print_fx.json
Qwen/Qwen3-4B/eval/torch_dispatch/: _TRACE_STATUS.json  torch_dispatch.json
Qwen/Qwen3-4B/eval/torch_inductor/: _TRACE_STATUS.json  torch_inductor.txt
Qwen/Qwen3-4B/eval/torch_profiler/: torch_kernel_profile.csv
Qwen/Qwen3-4B/eval/vllm_profiler/: _TRACE_STATUS.json  vllm_kernel_profile.csv  vllm_profile.json
config/: default.yaml
core/: config.py  orchestrator.py  worker.py
execution/: base.py  context.py  huggingface_execution.py  huggingface_loader.py  registry.py  vllm_execution.py  vllm_loader.py
status/: model_download.py  model_policy.py  model_status.py  trace_policy.py  trace_status.py
trace_data/Qwen/Qwen3-4B/eval/torch_inductor/: torch_inductor_kernels.json
trace_data/Qwen/Qwen3-4B/eval/torch_profiler/: _TRACE_STATUS.json  torch_profile.json
trace_data/Qwen/Qwen3-4B/eval/vllm_profiler/: vllm_kernel_profile.json
tracers/: base.py  profiler_extractor.py  registry.py  torch_dispatch.py  torch_dynamo_aten.py  torch_dynamo_fx.py  torch_inductor.py  torch_profiler.py  tracer_all.py  vllm_profiler.py
utils/: aggregate_trace.py  export_trace.py
