[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kerneltracer"
version = "0.1.0"
description = "Unified kernel / operator tracing framework for PyTorch, Dynamo, Inductor and vLLM"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Dongxu Han", email = "dxhan@baai.ac.cn" }
]

dependencies = [
  "torch>=2.2.0",
  "transformers>=4.40.0",
  "accelerate>=0.30.0",
  "tqdm",
  "rich",
  "psutil",
  "numpy",
]

[project.optional-dependencies]
vllm = [
  "vllm>=0.11.0",
]
dev = [
  "pytest",
  "black",
  "ruff",
  "mypy",
]

[project.scripts]
kerneltracer = "main:main"

[tool.setuptools]
packages = { find = { where = ["."], exclude = ["tests*", "docs*"] } }

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true
